--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3926,6 +3926,13 @@ table.dataTable thead .sorting_desc:after {
   color: white;
   border-radius: 20px;
   margin-right: 20px;
+
+	transition: 0.3s ease-in-out;
+	-moz-transition: 0.3s ease-in-out;
+	-webkit-transition: 0.3s ease-in-out;
+}
+.csvButton:hover {
+	background-color: magenta;
 }
 
 table.dataTable thead .pubsHeader {
