--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4194,3 +4194,191 @@ h5 {
 	color: var(--background-color); 
 	text-decoration: none;
 }
+
+
+
+
+/* <!--PEOPLE PAGE---> */ 
+
+/* BootSnippet cards require FontAwesome */
+ #team {
+    background: #eee !important;
+}
+.tf{
+    /* height: 580px; */
+    padding-right: 6%;
+    padding-top: 2%;
+    width: 100%; 
+}
+.tf .frontside .card .card-body img{
+    height: 300px;
+    /* width: 75%; */ 
+}
+
+.btn-primary:hover,
+.btn-primary:focus {
+    box-shadow: none;
+    outline: none;
+    color: var(--primary-color);
+}
+
+.card-title{
+    color: var(--primary-color);
+} 
+.card {
+    border: none;
+    background: #ffffff;  
+} 
+
+
+.image-flip:hover .backside,
+.image-flip.hover .backside {
+    -webkit-transform: rotateY(0deg);
+    -moz-transform: rotateY(0deg);
+    -o-transform: rotateY(0deg);
+    -ms-transform: rotateY(0deg);
+    transform: rotateY(0deg);
+    border-radius: .25rem;
+}
+
+.image-flip:hover .frontside,
+.image-flip.hover .frontside {
+    -webkit-transform: rotateY(180deg);
+    -moz-transform: rotateY(180deg);
+    -o-transform: rotateY(180deg);
+    transform: rotateY(180deg);
+}
+
+.mainflip {
+    -webkit-transition: 1s;
+    -webkit-transform-style: preserve-3d;
+    -ms-transition: 1s;
+    -moz-transition: 1s;
+    -moz-transform: perspective(1000px);
+    -moz-transform-style: preserve-3d;
+    -ms-transform-style: preserve-3d;
+    transition: 1s;
+    transform-style: preserve-3d;
+    position: relative;
+}
+
+.frontside {
+    position: relative;
+    -webkit-transform: rotateY(0deg);
+    -ms-transform: rotateY(0deg);
+    z-index: 2;
+    margin-bottom: 30px; 
+}
+
+.backside {
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: white;
+    margin-bottom: 30px;
+    -webkit-transform: rotateY(-180deg);
+    -moz-transform: rotateY(-180deg);
+    -o-transform: rotateY(-180deg);
+    -ms-transform: rotateY(-180deg);
+    transform: rotateY(-180deg);
+
+    -webkit-box-shadow: 5px 7px 9px -4px rgb(158, 158, 158);
+    -moz-box-shadow: 5px 7px 9px -4px rgb(158, 158, 158);
+    box-shadow: 5px 7px 9px -4px rgb(158, 158, 158);
+    
+}
+
+.frontside,
+.backside {
+    -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
+    -ms-backface-visibility: hidden;
+    backface-visibility: hidden;
+    -webkit-transition: 1s;
+    -webkit-transform-style: preserve-3d;
+    -moz-transition: 1s;
+    -moz-transform-style: preserve-3d;
+    -o-transition: 1s;
+    -o-transform-style: preserve-3d;
+    -ms-transition: 1s;
+    -ms-transform-style: preserve-3d;
+    transition: 1s;
+    transform-style: preserve-3d;
+}
+
+.frontside .card,
+.backside .card {
+    min-height: 500px;
+}
+
+.backside .card a {  
+    color: var(--secondary-color) !important;
+}
+
+.frontside .card .card-title,
+.backside .card .card-title {
+    color: var(--primary-color)!important;
+}
+
+.frontside .card .card-body img {
+    /* width: 700px; */
+    /* height: 180px; */
+    border-radius: 40%;
+
+    -webkit-box-shadow: 5px 7px 9px -4px rgb(158, 158, 158);
+    -moz-box-shadow: 5px 7px 9px -4px rgb(158, 158, 158);
+    box-shadow: 5px 7px 9px -4px rgb(158, 158, 158);
+}
+
+.backside .card {
+  font-size: 1.2vw;  
+
+}
+.backside .card i {
+  font-size: 3vh; 
+   
+  -webkit-transition: .5s;
+  -webkit-transform-style: preserve-3d;
+  -moz-transition: .5s;
+  -moz-transform-style: preserve-3d;
+  -o-transition: .5s;
+  -o-transform-style: preserve-3d;
+  -ms-transition: .5s;
+  -ms-transform-style: preserve-3d;
+  transition: .5s;
+}
+
+.backside .card i:hover {
+  color: var(--primary-color);
+  font-size: 4vh;
+}
+.backside .card i:hover p{
+  color: var(--primary-color);
+  font-size: 5vh;
+  text-decoration: none;
+}
+
+.backside .card img { 
+  height:  3vh;
+  margin-top: -10px;
+
+  -webkit-transition: .5s;
+  -webkit-transform-style: preserve-3d;
+  -moz-transition: .5s;
+  -moz-transform-style: preserve-3d;
+  -o-transition: .5s;
+  -o-transform-style: preserve-3d;
+  -ms-transition: .5s;
+  -ms-transform-style: preserve-3d;
+  transition: .5s;
+}
+.backside .card img:hover{
+  height:  4vh; 
+}
+.cvText {
+  margin: 0;
+  padding:0;
+  font-size: 1.5vh;
+} 
+
+
