--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4331,7 +4331,7 @@ h5 {
 }
 
 .backside .card {
-  font-size: 1.2vw;  
+  font-size: 1.1vw;  
 
 }
 .backside .card i {
@@ -4382,3 +4382,7 @@ h5 {
 } 
 
 
+.leadLetter {
+  display: inline;
+  font-family: var(--logo-font);
+}
