Team: add scrollbar for long profile, resize text according to screen dimensions; Footer/navbar import from external html files now

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -149,18 +149,19 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
-
+ 
+/* GENERAL */
 a {
-  color: var(--secondary-color);
-  -moz-transition: color 0.2s ease-in-out;
-  -webkit-transition: color 0.2s ease-in-out;
-  -ms-transition: color 0.2s ease-in-out;
-  transition: color 0.2s ease-in-out;
-  text-decoration: none;
+  color: magenta;
+  transition: 0.3s ease-in-out;
+  -moz-transition: 0.3s ease-in-out;
+  -webkit-transition: 0.3s ease-in-out; 
 }
 a:hover {
-  text-decoration: underline;
+  color: var(--primary-color);
+  text-decoration: none;
 }
+
 
 h1,
 h2,
@@ -2834,442 +2835,7 @@ table tfoot {
 table.alt tbody tr td {
   border-color: var(--primary-color);
 }
-
-/* Wrapper */
-
-.wrapper {
-  position: relative;
-}
-
-.wrapper > .inner {
-  margin: 0 auto;
-  width: 60em;
-}
-
-.wrapper.style1 {
-  background-color: var(--primary-color);
-  color: #f2a3a5;
-}
-
-.wrapper.style1 input,
-.wrapper.style1 select,
-.wrapper.style1 textarea {
-  color: var(--background-color);
-}
-
-.wrapper.style1 a {
-  color: var(--background-color);
-}
-
-.wrapper.style1 strong,
-.wrapper.style1 b {
-  color: var(--background-color);
-}
-
-.wrapper.style1 h1,
-.wrapper.style1 h2,
-.wrapper.style1 h3,
-.wrapper.style1 h4,
-.wrapper.style1 h5,
-.wrapper.style1 h6 {
-  color: var(--background-color);
-}
-
-.wrapper.style1 blockquote {
-  border-left-color: var(--background-color);
-}
-
-.wrapper.style1 code {
-  background: none;
-  border-color: var(--background-color);
-}
-
-.wrapper.style1 hr {
-  border-bottom-color: var(--background-color);
-}
-
-.wrapper.style1 .box {
-  border-color: var(--background-color);
-}
-
-.wrapper.style1 input[type="submit"],
-.wrapper.style1 input[type="reset"],
-.wrapper.style1 input[type="button"],
-.wrapper.style1 button,
-.wrapper.style1 .button {
- color: var(--secondary-color);
-  	background-color: rgba(25, 25, 25, 1);
-}
-
-.wrapper.style1 input[type="submit"]:hover,
-.wrapper.style1 input[type="reset"]:hover,
-.wrapper.style1 input[type="button"]:hover,
-.wrapper.style1 button:hover,
-.wrapper.style1 .button:hover {
-	color: var(--secondary-color);
-	background-color: rgba(25, 25, 25, 1);
-}
-
-.wrapper.style1 input[type="submit"]:active,
-.wrapper.style1 input[type="reset"]:active,
-.wrapper.style1 input[type="button"]:active,
-.wrapper.style1 button:active,
-.wrapper.style1 .button:active {
-  background-color: #4d4d4d;
-}
-
-.wrapper.style1 input[type="submit"].alt,
-.wrapper.style1 input[type="reset"].alt,
-.wrapper.style1 input[type="button"].alt,
-.wrapper.style1 button.alt,
-.wrapper.style1 .button.alt {
-  background-color: transparent;
-  box-shadow: inset 0 0 0 2px var(--background-color);
-  color: var(--background-color) !important;
-}
-
-.wrapper.style1 input[type="submit"].alt:hover,
-.wrapper.style1 input[type="reset"].alt:hover,
-.wrapper.style1 input[type="button"].alt:hover,
-.wrapper.style1 button.alt:hover,
-.wrapper.style1 .button.alt:hover {
-  background: rgba(255, 255, 255, 0.25);
-}
-
-.wrapper.style1 input[type="submit"].alt:active,
-.wrapper.style1 input[type="reset"].alt:active,
-.wrapper.style1 input[type="button"].alt:active,
-.wrapper.style1 button.alt:active,
-.wrapper.style1 .button.alt:active {
-  background-color: rgba(255, 255, 255, 0.2);
-}
-
-.wrapper.style1 input[type="submit"].alt.icon:before,
-.wrapper.style1 input[type="reset"].alt.icon:before,
-.wrapper.style1 input[type="button"].alt.icon:before,
-.wrapper.style1 button.alt.icon:before,
-.wrapper.style1 .button.alt.icon:before {
-  color: var(--secondary-color);
-}
-
-.wrapper.style1 input[type="submit"].special,
-.wrapper.style1 input[type="reset"].special,
-.wrapper.style1 input[type="button"].special,
-.wrapper.style1 button.special,
-.wrapper.style1 .button.special {
-  background-color: var(--background-color);
-  color: var(--primary-color) !important;
-}
-
-.wrapper.style1 label {
-  color: var(--background-color);
-}
-
-.wrapper.style1 input[type="text"],
-.wrapper.style1 input[type="password"],
-.wrapper.style1 input[type="email"],
-.wrapper.style1 select,
-.wrapper.style1 textarea {
-  background: none;
-  border-color: rgba(255, 255, 255, 0.25);
-}
-
-.wrapper.style1 input[type="text"]:focus,
-.wrapper.style1 input[type="password"]:focus,
-.wrapper.style1 input[type="email"]:focus,
-.wrapper.style1 select:focus,
-.wrapper.style1 textarea:focus {
-  border-color: var(--background-color);
-  box-shadow: 0 0 0 1px var(--background-color);
-}
-
-.wrapper.style1 .select-wrapper:before {
-  color: var(--background-color);
-}
-
-.wrapper.style1 input[type="checkbox"] + label,
-.wrapper.style1 input[type="radio"] + label {
-  color: #f2a3a5;
-}
-
-.wrapper.style1 input[type="checkbox"] + label:before,
-.wrapper.style1 input[type="radio"] + label:before {
-  background: none;
-  border-color: var(--background-color);
-}
-
-.wrapper.style1 input[type="checkbox"]:checked + label:before,
-.wrapper.style1 input[type="radio"]:checked + label:before {
-  background-color: var(--background-color);
-  border-color: var(--background-color);
-  color: var(--primary-color);
-}
-
-.wrapper.style1 input[type="checkbox"]:focus + label:before,
-.wrapper.style1 input[type="radio"]:focus + label:before {
-  border-color: var(--background-color);
-  box-shadow: 0 0 0 1px var(--background-color);
-}
-
-.wrapper.style1 ::-webkit-input-placeholder {
-  color: var(--secondary-color) !important;
-}
-
-.wrapper.style1 :-moz-placeholder {
-  color: var(--secondary-color) !important;
-}
-
-.wrapper.style1 ::-moz-placeholder {
-  color: var(--secondary-color) !important;
-}
-
-.wrapper.style1 :-ms-input-placeholder {
-  color: var(--secondary-color) !important;
-}
-
-.wrapper.style1 .formerize-placeholder {
-  color: var(--secondary-color) !important;
-}
-
-.wrapper.style1 ul.alt li {
-  border-top-color: var(--background-color);
-}
-
-.wrapper.style1 header p {
-  color: var(--secondary-color);
-}
-
-.wrapper.style1 table tbody tr {
-  border-color: var(--background-color);
-}
-
-.wrapper.style1 table tbody tr:nth-child(2n + 1) {
-  background-color: none;
-}
-
-.wrapper.style1 table th {
-  color: var(--background-color);
-}
-
-.wrapper.style1 table thead {
-  border-bottom-color: var(--background-color);
-}
-
-.wrapper.style1 table tfoot {
-  border-top-color: var(--background-color);
-}
-
-.wrapper.style1 table.alt tbody tr td {
-  border-color: var(--background-color);
-}
-
-.wrapper.style2 {
-  background-color: var(--tertiary-color);
-  color: #d5d5d5;
-}
-
-.wrapper.style2 input,
-.wrapper.style2 select,
-.wrapper.style2 textarea {
-  color: var(--background-color);
-}
-
-.wrapper.style2 a {
-  color: var(--primary-color);
-}
-
-.wrapper.style2 strong,
-.wrapper.style2 b {
-  color: var(--background-color);
-}
-
-.wrapper.style2 blockquote {
-  border-left-color: rgba(255, 255, 255, 0.15);
-}
-
-.wrapper.style2 code {
-  background: rgba(255, 255, 255, 0.075);
-  border-color: rgba(255, 255, 255, 0.15);
-}
-
-.wrapper.style2 hr {
-  border-bottom-color: rgba(255, 255, 255, 0.15);
-}
-
-.wrapper.style2 .box {
-  border-color: rgba(255, 255, 255, 0.15);
-}
-
-.wrapper.style2 input[type="submit"],
-.wrapper.style2 input[type="reset"],
-.wrapper.style2 input[type="button"],
-.wrapper.style2 button,
-.wrapper.style2 .button {
-  background-color: var(--background-color);
-  color: var(--tertiary-color) !important;
-}
-
-.wrapper.style2 input[type="submit"].alt,
-.wrapper.style2 input[type="reset"].alt,
-.wrapper.style2 input[type="button"].alt,
-.wrapper.style2 button.alt,
-.wrapper.style2 .button.alt {
-  background-color: transparent;
-  box-shadow: inset 0 0 0 2px rgba(255, 255, 255, 0.15);
-  color: var(--background-color) !important;
-}
-
-.wrapper.style2 input[type="submit"].alt:hover,
-.wrapper.style2 input[type="reset"].alt:hover,
-.wrapper.style2 input[type="button"].alt:hover,
-.wrapper.style2 button.alt:hover,
-.wrapper.style2 .button.alt:hover {
-  background: rgba(255, 255, 255, 0.5);
-}
-
-.wrapper.style2 input[type="submit"].alt:active,
-.wrapper.style2 input[type="reset"].alt:active,
-.wrapper.style2 input[type="button"].alt:active,
-.wrapper.style2 button.alt:active,
-.wrapper.style2 .button.alt:active {
-  background-color: rgba(255, 255, 255, 0.2);
-}
-
-.wrapper.style2 input[type="submit"].alt.icon:before,
-.wrapper.style2 input[type="reset"].alt.icon:before,
-.wrapper.style2 input[type="button"].alt.icon:before,
-.wrapper.style2 button.alt.icon:before,
-.wrapper.style2 .button.alt.icon:before {
-  color: var(--secondary-color);
-}
-
-.wrapper.style2 input[type="submit"].special,
-.wrapper.style2 input[type="reset"].special,
-.wrapper.style2 input[type="button"].special,
-.wrapper.style2 button.special,
-.wrapper.style2 .button.special {
-  background-color: var(--primary-color);
-  color: var(--background-color) !important;
-}
-
-.wrapper.style2 input[type="submit"].special:hover,
-.wrapper.style2 input[type="reset"].special:hover,
-.wrapper.style2 input[type="button"].special:hover,
-.wrapper.style2 button.special:hover,
-.wrapper.style2 .button.special:hover {
-  background-color: #e85d61;
-}
-
-.wrapper.style2 input[type="submit"].special:active,
-.wrapper.style2 input[type="reset"].special:active,
-.wrapper.style2 input[type="button"].special:active,
-.wrapper.style2 button.special:active,
-.wrapper.style2 .button.special:active {
-  background-color: #e23135;
-}
-
-.wrapper.style2 label {
-  color: var(--background-color);
-}
-
-.wrapper.style2 input[type="text"],
-.wrapper.style2 input[type="password"],
-.wrapper.style2 input[type="email"],
-.wrapper.style2 select,
-.wrapper.style2 textarea {
-  background: rgba(255, 255, 255, 0.075);
-  border-color: rgba(255, 255, 255, 0.5);
-}
-
-.wrapper.style2 input[type="text"]:focus,
-.wrapper.style2 input[type="password"]:focus,
-.wrapper.style2 input[type="email"]:focus,
-.wrapper.style2 select:focus,
-.wrapper.style2 textarea:focus {
-  border-color: var(--primary-color);
-  box-shadow: 0 0 0 1px var(--primary-color);
-}
-
-.wrapper.style2 .select-wrapper:before {
-  color: rgba(255, 255, 255, 0.15);
-}
-
-.wrapper.style2 input[type="checkbox"] + label,
-.wrapper.style2 input[type="radio"] + label {
-  color: #d5d5d5;
-}
-
-.wrapper.style2 input[type="checkbox"] + label:before,
-.wrapper.style2 input[type="radio"] + label:before {
-  background: rgba(255, 255, 255, 0.075);
-  border-color: rgba(255, 255, 255, 0.15);
-}
-
-.wrapper.style2 input[type="checkbox"]:checked + label:before,
-.wrapper.style2 input[type="radio"]:checked + label:before {
-  background-color: var(--primary-color);
-  border-color: var(--primary-color);
-  color: var(--background-color);
-}
-
-.wrapper.style2 input[type="checkbox"]:focus + label:before,
-.wrapper.style2 input[type="radio"]:focus + label:before {
-  border-color: var(--primary-color);
-  box-shadow: 0 0 0 1px var(--primary-color);
-}
-
-.wrapper.style2 ::-webkit-input-placeholder {
-  color: #bdbdbd !important;
-}
-
-.wrapper.style2 :-moz-placeholder {
-  color: #bdbdbd !important;
-}
-
-.wrapper.style2 ::-moz-placeholder {
-  color: #bdbdbd !important;
-}
-
-.wrapper.style2 :-ms-input-placeholder {
-  color: #bdbdbd !important;
-}
-
-.wrapper.style2 .formerize-placeholder {
-  color: #bdbdbd !important;
-}
-
-.wrapper.style2 ul.alt li {
-  border-top-color: rgba(255, 255, 255, 0.15);
-}
-
-.wrapper.style2 header p {
-  color: #bdbdbd;
-}
-
-.wrapper.style2 table tbody tr {
-  border-color: rgba(255, 255, 255, 0.15);
-}
-
-.wrapper.style2 table tbody tr:nth-child(2n + 1) {
-  background-color: rgba(255, 255, 255, 0.075);
-}
-
-.wrapper.style2 table th {
-  color: var(--background-color);
-}
-
-.wrapper.style2 table thead {
-  border-bottom-color: rgba(255, 255, 255, 0.15);
-}
-
-.wrapper.style2 table tfoot {
-  border-top-color: rgba(255, 255, 255, 0.15);
-}
-
-.wrapper.style2 table.alt tbody tr td {
-  border-color: rgba(255, 255, 255, 0.15);
-}
-
+ 
 @media screen and (max-width: 1280px) {
   .wrapper > .inner {
     width: 65em;
@@ -3763,14 +3329,10 @@ i.red {
 #footer .col-md-3 {
   display: inline-table;
   margin-bottom: 10px;
-}
-
-#footer a {
-  color: blue;
-}
+} 
 #footer h3,
 #footer h4 {
-  color: var(--background-color);
+  color: var(--tertiary-color);
   white-space: nowrap;
 }
 #footer p {
@@ -3790,30 +3352,34 @@ i.red {
 
 #sinai-logo {
   text-align: left;
+ } 
+#github-logo {
+  max-width: 100%;
+  max-height: 100px; 
+  border-radius: 4px;
+  padding: 10px; 
+} 
+#sinai-logo,
+#github-logo {
   background-color: rgba(255, 255, 255, 0.3);
+  transition: 0.3s ease-in-out;
+  -moz-transition: 0.3s ease-in-out;
+  -webkit-transition: 0.3s ease-in-out;
 }
+
 #sinai-logo img {
   border-radius: 4px;
   padding: 20px;
   max-width: 100%;
-  max-height: 100px;
+  max-height: 100px; 
 }
 
-#github-logo {
-  max-width: 100%;
-  max-height: 100px;
-  background-color: rgba(255, 255, 255, 0.3);
-  border-radius: 4px;
-  padding: 10px;
-}
 
 #sinai-logo:hover,
 #github-logo:hover {
   background-color: rgba(255, 255, 255, 0.7);
-
-  transition: 0.3s ease-in-out;
-  -moz-transition: 0.3s ease-in-out;
-  -webkit-transition: 0.3s ease-in-out;
+  text-decoration: none;
+  
   -webkit-box-shadow: 10px 10px 28px -7px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 10px 10px 28px -7px rgba(0, 0, 0, 0.75);
   box-shadow: 10px 10px 28px -7px rgba(0, 0, 0, 0.75);
@@ -3970,16 +3536,6 @@ table.dataTable thead .pubsHeader {
 
 
 
-/* GENERAL */
-a {
-  color: magenta;
-  transition: 0.3s ease-in-out;
-  -moz-transition: 0.3s ease-in-out;
-  -webkit-transition: 0.3s ease-in-out;
-}
-a:hover {
-  color: var(--secondary-color);
-}
 
 /* Grants */
 .collapseButton h2, 
@@ -4200,20 +3756,22 @@ h5 {
 
 /* <!--PEOPLE PAGE---> */ 
 
-/* BootSnippet cards require FontAwesome */
- #team {
-    background: #eee !important;
-}
-.tf{
+/* BootSnippet cards require FontAwesome */ 
+.tf {
     /* height: 580px; */
     padding-right: 6%;
     padding-top: 2%;
     width: 100%; 
+    /* min-height: 500px;  */
 }
+
 .tf .frontside .card .card-body img{
-    height: 300px;
-    /* width: 75%; */ 
+  max-width: 45%; 
+} 
+.tf .backside .card {
+  max-height: 500px; 
 }
+
 
 .btn-primary:hover,
 .btn-primary:focus {
@@ -4228,9 +3786,7 @@ h5 {
 .card {
     border: none;
     background: #ffffff;  
-} 
-
-
+}  
 .image-flip:hover .backside,
 .image-flip.hover .backside {
     -webkit-transform: rotateY(0deg);
@@ -4286,8 +3842,7 @@ h5 {
     -moz-box-shadow: 5px 7px 9px -4px rgb(158, 158, 158);
     box-shadow: 5px 7px 9px -4px rgb(158, 158, 158);
     
-}
-
+} 
 .frontside,
 .backside {
     -webkit-backface-visibility: hidden;
@@ -4306,10 +3861,17 @@ h5 {
     transform-style: preserve-3d;
 }
 
-.frontside .card,
-.backside .card {
-    min-height: 500px;
+#team .frontside .card,
+#team .backside .card {  
+   height: 500px;
 }
+
+.backside .card { 
+  /* font-size: 1.7vh !important;  */
+  font-size: calc(.65vw + .65vh + .25vmin);
+
+  overflow-y: scroll; 
+} 
 
 .backside .card a {  
     color: var(--secondary-color) !important;
@@ -4320,22 +3882,17 @@ h5 {
     color: var(--primary-color)!important;
 }
 
-.frontside .card .card-body img {
-    /* width: 700px; */
-    /* height: 180px; */
+.frontside .card .card-body img { 
     border-radius: 40%;
 
     -webkit-box-shadow: 5px 7px 9px -4px rgb(158, 158, 158);
     -moz-box-shadow: 5px 7px 9px -4px rgb(158, 158, 158);
     box-shadow: 5px 7px 9px -4px rgb(158, 158, 158);
-}
+} 
 
-.backside .card {
-  font-size: 1.1vw;  
-
-}
 .backside .card i {
-  font-size: 3vh; 
+  /* font-size: 3vh;  */ 
+  font-size: calc(1.5vw + 1.5vh + .5vmin);
    
   -webkit-transition: .5s;
   -webkit-transform-style: preserve-3d;
@@ -4357,24 +3914,7 @@ h5 {
   font-size: 5vh;
   text-decoration: none;
 }
-
-.backside .card img { 
-  height:  3vh;
-  margin-top: -10px;
-
-  -webkit-transition: .5s;
-  -webkit-transform-style: preserve-3d;
-  -moz-transition: .5s;
-  -moz-transform-style: preserve-3d;
-  -o-transition: .5s;
-  -o-transform-style: preserve-3d;
-  -ms-transition: .5s;
-  -ms-transform-style: preserve-3d;
-  transition: .5s;
-}
-.backside .card img:hover{
-  height:  4vh; 
-}
+ 
 .cvText {
   margin: 0;
   padding:0;
