--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,7 +7,7 @@
   --primary-color: #38afec; /* #e5474b; */
   --secondary-color: #d51c8c;
   --tertiary-color: lightgray;
-  --background-color: #fff;
+  --background-color: rgba(0,0,0,.7);
 }
 
 /* Reset */
@@ -101,6 +101,7 @@ video {
   -moz-osx-font-smoothing: grayscale;
   text-rendering: geometricPrecision;
 }
+
 
 body {
   font-family: var(--main-font);
@@ -3923,6 +3924,7 @@ h5 {
     box-shadow: 5px 7px 9px -4px rgb(158, 158, 158);
 } 
 
+
 .backside .card i {
   /* font-size: 3vh;  */ 
   font-size: calc(1.5vw + 1.5vh + .5vmin);
@@ -3947,6 +3949,24 @@ h5 {
   font-size: 5vh;
   text-decoration: none;
 }
+
+.frontside p,
+.backside p{
+  color: rgba(0,0,0,.7);
+}
+
+#visiting_members,
+#lab_alumni {
+  color: rgba(255,255,255,0.9);
+  background: rgba(0,0,0,.5);
+  border-radius: 4px;
+  padding: 3%;
+}
+#visiting_members h2,
+#lab_alumni h2 {
+  color: var(--secondary-color);
+}
+
  
 .cvText {
   margin: 0;
@@ -3963,13 +3983,19 @@ h5 {
 
 /* BACKGROUND VIDEO */
 video {
-   position: fixed; 
-   /* width: 100%;  */
-   height:100%;
+   position: fixed;   
+   top:0;
+  right:0;
+  left:0;
+  bottom:0;
+  z-index:-1;
+  /* height: 100vh; */ 
+  /* width: 100vw; */
+
    z-index: -2;  
-   background-size: 150px;
-  background-repeat: space;
-  filter:opacity(60%);
+   /* background-size: 150px; */
+  /* background-repeat: repeat; */
+  /* filter:opacity(60%); */
 }
 
 #home-top-video:before {
@@ -3980,7 +4006,7 @@ video {
   left:0;
   bottom:0;
   z-index:-1;
-  /* height: 100vh; */
+  /* height: 100vh; */ 
   width: 100vw;
   background:linear-gradient(to right,rgba(65, 0, 255, 0.4),rgba(255, 0, 232, 0.3));
 } 
@@ -3988,4 +4014,5 @@ video {
   color: white;
 }
 
- 
+
+
