--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3928,6 +3928,9 @@ h5 {
 
 .frontside .card .card-body img { 
     border-radius: 40%;
+    max-height: 200px;
+    width: 100%;
+    object-fit: cover;
 
     -webkit-box-shadow: 5px 7px 9px -4px rgb(158, 158, 158);
     -moz-box-shadow: 5px 7px 9px -4px rgb(158, 158, 158);
